--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -75,6 +75,14 @@
 .nav-dropdown {
   display: none;
 }
+.profile-icon img{
+  width: 40px;
+  height: 40px;
+}
+.wishlist-icon img{
+  width: 40px;
+  height: 40px;
+}
 @media (max-width: 1280px) {
   .navbar {
     padding: 12px 50px;
